Fix plate z-index

--- a/assets/scss/layouts/_category.scss
+++ b/assets/scss/layouts/_category.scss
@@ -9,7 +9,7 @@
     height: 100vh;
     margin-top: 100vh;
     position: relative;   
-    z-index: 1;
+    z-index: -1;
   
 
     h1{
